# Synonymity-Seeker

./: CMakeLists.txt  Graph.cpp  Graph.h  LICENSE  README.md  Synonymity Seeker.cpp  SynonymitySeeker.cpp  Traversals.h  Widget.cpp  Widget.h  Widget.ui  graph.cpp  graph.h  main.cpp
